--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "firebase-tools": "^14.0.1",
     "framer-motion": "^12.6.3",
+    "lodash.debounce": "^4.0.8",
     "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
